--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,22 @@
-djangorestframework>=3.12.0
-djangorestframework-simplejwt>=4.7.2
-django-cors-headers>=3.7.0
-drf-spectacular
+asgiref==3.8.0
+attrs==23.2.0
+Django==5.0.3
+django-cors-headers==4.3.1
 django-debug-toolbar==4.3.0
+django-environ==0.10.0
+djangorestframework==3.15.0
+djangorestframework-simplejwt==5.3.1
+drf-spectacular==0.27.1
 gunicorn==21.2.0
+inflection==0.5.1
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+packaging==24.0
+PyJWT==2.8.0
+python-dotenv==0.20.0
+PyYAML==6.0.1
+referencing==0.34.0
+rpds-py==0.18.0
+sqlparse==0.4.4
+typing_extensions==4.10.0
+uritemplate==4.1.1
