--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==5.0.3
 django-cors-headers==4.3.1
 django-debug-toolbar==4.3.0
 django-environ==0.10.0
+django-filter==24.1
 djangorestframework==3.15.0
 djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.27.1
